--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3474,7 +3474,7 @@ input, select, textarea {
 		background-attachment: fixed;
 		background-color:   rgb(256, 256, 256
  );
-		background-image: url("../../images/inductor.png");
+		background-image: url("../../images/LogoBackground.jpg");
 		background-position: center center;
 		background-size: cover;
 		box-shadow: none;
